--- a/gb/nf3046_4.md
+++ b/gb/nf3046_4.md
@@ -12,7 +12,7 @@
 
 &nbsp;......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月15日 12:14 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/9/1/n11492087.md#1" target="_blank">法兰克福中国节上 民众谴责中共迫害法轮功</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/9/1/n11492087.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/365285D4-C993-41B7-A03E-8C2727AA590F-150x120.jpeg" align ="left"></a>8月30日至9月1日，法轮功学员在法兰克福市内举行的“中国节”期间，举办了信息日活动，向民众揭露中共对法轮功的残酷迫害并征集反迫害签名，得到许多民众的支持，其中明白真相的华人声明退出中共组织。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月03日 7:00 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/8/30/n11487732.md#1" target="_blank">30多国法轮功学员聚伦敦 在著名景点洪法</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/8/30/n11487732.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/48642438366_5ccb244540_o1-150x120.jpg" align ="left"></a>“我曾经是一位太极拳教练，2012年我到了中国的武当山，因为我对气功非常好奇，中国一位中医大夫告诉我，在中国有一种气功是被禁止的。我当时听到这个消息非常吃惊，因此开始在网络上查询关于法轮大法的消息，当看到法轮大法的书时，我立刻就明白了：就是我要找的！我终于找到了法轮大法！”戈杰?查代（Gorger Cadez）说。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月30日 4:14 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/10/4/n11567761.md#1" target="_blank">参考资料：纵观天下（2018年10月传单/传真）</a><br></h3>丹麦召开反活摘器官罪行会议 蒙特利尔声援三亿中国人三退 为自由公义而退 中共白皮书中的人权谬论 人心渐明小故事 邪党杀人史......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月04日 6:41 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/10/3/n11564323.md#1" target="_blank">每日三退声明精选（2019/10/02）</a><br></h3>香港反送中运动给人类带来的巨大收获之一是使中共的邪恶本质得以暴露得淋漓尽致，让全世界（特别是香港、台湾）进一步看清了中共的丑恶嘴脸及魔鬼本性。一个拥有法治传统的香港，仅仅因为有市民抗议活动，只用了三个月，就变成了失去一切监督的武装人员可以强奸、酷刑和秘密杀人的人间地狱？因为中共就是塔利班这样的恐怖组织！现在发生在香港的奸、杀、滥捕的所有疯狂行径，目的与塔利班.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月03日 10:46 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/10/1/n11558853.md#1" target="_blank">每日三退声明精选（2019/09/30）</a><br></h3>尽管邪党的极力宣传国殇日，全国到处挂满血旗，人们还是看清共产党的末期与邪恶，我们声明退出中共一切组织，远离邪灵，选择光明。愿《九评》传的越来越广，愿所有被共产党毒害的人都能清醒认识其邪教本质，唾弃它，解体它，还人一个清明世界。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月01日 11:18 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/9/30/n11556078.md#1" target="_blank">每日三退声明精选（2019/09/29）</a><br></h3>邪党过生日闹得鸡犬不宁，民营企业几天一检查，为了到达空气污染不太严重北京周围几百公里一周前就汽车限号出行，很多快递不许进京，往新疆的一切快递干脆停运，也许是发快递的公司怕惹麻烦以免被共产党处罚，虽然歌声不断街道插满红旗，我们从这紧张的空气中看到共产党的恐慌，真是做贼心虚，亡党在即。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月30日 11:54 AM							</td></tr>
