--- a/gb/ncid280_4.md
+++ b/gb/ncid280_4.md
@@ -9,14 +9,7 @@
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/12/n11718851.md#1" target="_blank">厦门地铁地面塌陷 2车坠入 大量积水涌入</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/12/n11718851.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Unknown-3-150x120.jpg" align ="left"></a>继广州市区主干道12月1日发生地面塌陷之后，厦门地铁吕厝站12月12日晚发生地面塌陷，两辆轿车掉落坑内，据报并未造成人员伤亡。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 12:45 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/12/n11717105.md#1" target="_blank">大陆最新非洲猪瘟疫情 陕西有野猪死亡</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/12/n11717105.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-697069006-1-600x400-150x120.jpg" align ="left"></a>非洲猪瘟疫情在大陆持续蔓延，重创养猪业。目前最新消息说，陕西境内有死亡野猪也检测出非洲猪瘟病毒。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 11:28 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/11/n11716656.md#1" target="_blank">疫情扩大 哈尔滨再有13名学生感染布病</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/11/n11716656.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2008/06/806120829481093-150x120.jpg" align ="left"></a>中国农科院兰州兽医研究所11月下旬爆发布鲁氏菌病（布病），并导致至少96人被感染后，同属中国农科院的哈尔滨兽医研究所再有13名学生感染布病。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 4:12 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/22/n11738149.md#1" target="_blank">中山市古镇一小区住宅着火 一家六口遇难</a><br></h3>12月22日凌晨，广东中山市古镇镇晋南路一小区住宅发大火，导致6人死亡。
-
-“灯都古镇”微信公众号消息，12月22日凌晨，古镇镇晋南路一小区住宅发生火灾。凌晨2时3分，消防部门赶赴现场灭火，一直到凌晨3时许明火才被扑灭，现场清理时发现6人死亡。
-
-目前火灾原因仍在调查中。
-
-“中山发布”微信公众号消息，死者为屋主区某夫妇、一儿两女和区某母亲。
-.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月22日 3:00 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/9/n11711924.md#1" target="_blank">侵大陆并定殖 草地贪夜蛾明年恐进暴发阶段</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/9/n11711924.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/GettyImages-954036218-150x120.jpg" align ="left"></a>中共农业农村部称，草地贪夜蛾今年入侵大陆并定殖，明年恐进入爆发阶段，春季向长江流域迁飞的时间会比2019年提前1个月左右，造成的危害预计会比2019年更大。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 7:26 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/21/n11736993.md#1" target="_blank">吉林载37人巴士侧滑坠江 6人死亡</a><br></h3>12月21日，吉林通化市一辆载有39人的巴士在江边发生侧滑，造成4人死亡。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 5:43 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/20/n11734233.md#1" target="_blank">四川内江再发生3.3级地震</a><br></h3>12月20日，中国地震台网正式测定，20日8时52分，四川内江市威远县（北纬29.50度，东经104.54度）发生3.3级地震，震源深度13千米。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 10:30 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/19/n11731701.md#1" target="_blank">四川再发地震 今年至少14次地震</a><br></h3>继12月18日四川内江5.2发生地震后，19日凌晨，四川绵阳再发3级地震，震源深度10千米。今年四川频发地震，加上今次，发生至少14次地震，还有部分余震未算入。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 11:02 AM							</td></tr>
