--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -36,11 +36,11 @@
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11778636.md#1">【专访】台立委黄国昌：中共渗透威胁多严重</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11779545.md#1">年幼时逃离伊朗 美军航母舰长现被派至中东</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11779563.md#1">青海省公安厅前副厅长涉受贿等罪被起诉</a><br>
+<a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11779029.md#1">王立强遭死亡威胁 卷入台湾大选 学者解析</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11779418.md#1">中共文艺界多名官员被查 1人为女歌手</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11779070.md#1">黑龙江前市委书记曾畏罪潜逃 逃跑路线曝光</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/8/n11778044.md#1">【名家专栏】FBI应为滥用外国情报监视法负责</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11779278.md#1">警方五闯校园 港大学生会向邓炳强发律师信</a><br>
-<a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11779029.md#1">王立强遭死亡威胁 学者分析因由</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11778877.md#1">澳洲警方：蔡正元孙天群威胁利诱王立强</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11779645.md#1">2019年 近万名法轮功学员被绑架骚扰</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11779813.md#1">中共犯下反人类罪 美国会报告促制裁</a><br>
@@ -93,7 +93,7 @@
 <tr><td VALIGN=TOP width="355"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/ukize233/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="352"><h2><p><strong>三退大潮</strong></p></h2><strong>退出中共党、团、队总人数:
 
 ```diff
-- 共 349,523,081 人
+- 共 349,536,075 人
 ```
 </strong>
 <a href="https://github.com/ukize233/djy/blob/master/gb/19/11/19/n11666092.md#1">九评15周年 看大陆民众弃中共 句句真情</a><br>
