--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -9,6 +9,7 @@
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/4/n11768055.md#1">川普击毙伊朗二号人物 对中共释何种信号</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/4/n11767049.md#1">伊朗二号人物索莱马尼被击毙 他是什么人？</a><br>
 <br><p><a href="https://github.com/ukize233/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
+<a href="https://github.com/ukize233/djy/blob/master/gb/20/1/8/n11778044.md#1">【名家专栏】FBI应为滥用外国情报监视法负责</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11779125.md#1">朱同：没有暴徒，只有暴政</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11778817.md#1">港人心声：不想看到宝岛成为第二个香港</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/19/12/22/n11738121.md#1">【思想领袖】戴耀廷：香港抗议者的智慧（上）</a><br>
@@ -21,7 +22,6 @@
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/8/n11776272.md#1">文静：铁蹄下“岁月静好”吗？</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/8/n11776203.md#1">黄清于：保持善念 躲过中共引来的天灾</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/7/n11775350.md#1">袁斌：环时变相为苏莱曼尼唱挽歌被网民打脸</a><br>
-<a href="https://github.com/ukize233/djy/blob/master/gb/20/1/7/n11775628.md#1">【名家专栏】社交媒体成为教师有效交流平台</a><br>
 <br><p><a href="https://github.com/ukize233/djy/blob/master/gb/news392.md#1">更多......</a></p><hr><h2><p><strong>独家视角</strong></p></h2>
 <a href="https://github.com/ukize233/djy/blob/master/gb/19/12/5/n11701493.md#1">【思想领袖】中共内部承认正走向解体（一）</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/19/12/23/n11739570.md#1">【2019盘点】时代变革 川普的九记重锤</a><br>
@@ -30,6 +30,8 @@
 <a href="https://github.com/ukize233/djy/blob/master/gb/19/12/29/n11752526.md#1">【2019盘点】中共在香港问题的十大谎言</a><br>
 <br><p><a href="https://github.com/ukize233/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
+<a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11780320.md#1">军工高层传巨额贪腐自杀 中共战机员工维权</a><br>
+<a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11780343.md#1">王赫：川普三件事定调2020年</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11780032.md#1">刘鹤13日赴美签协议 环时叫嚷“不着急签”</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11778994.md#1">组图：台湾大选倒计时 候选人全力冲刺</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11779864.md#1">脱贫率超99.99%？江苏“脱贫神话”遭质疑</a><br>
@@ -40,8 +42,6 @@
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11779029.md#1">王立强遭死亡威胁 卷入台湾大选 学者解析</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11779418.md#1">中共文艺界多名官员被查 1人为女歌手</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11779070.md#1">黑龙江前市委书记曾畏罪潜逃 逃跑路线曝光</a><br>
-<a href="https://github.com/ukize233/djy/blob/master/gb/20/1/8/n11778044.md#1">【名家专栏】FBI应为滥用外国情报监视法负责</a><br>
-<a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11779278.md#1">警方五闯校园 港大学生会向邓炳强发律师信</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/8/n11777696.md#1">美专家：北京可能成为台湾选举大输家</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11780211.md#1">前北约秘书长：台湾大选是中共资讯战演习场</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11779645.md#1">2019年 近万名法轮功学员被绑架骚扰</a><br>
