--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -7,7 +7,7 @@
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/6/n11772655.md#1">【新闻看点】习突换人 骆惠宁记者会为何颤抖</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/5/n11770092.md#1">高速收费新系统启动 路费暴涨 民怨四起</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/4/n11768055.md#1">川普击毙伊朗二号人物 对中共释何种信号</a><br>
-<a href="https://github.com/ukize233/djy/blob/master/gb/20/1/4/n11767049.md#1">伊朗二号人物索莱马尼被击毙 他是什么人？</a><br>
+<a href="https://github.com/ukize233/djy/blob/master/gb/20/1/8/n11776083.md#1">中共央视前主持人芮成钢近况被曝光</a><br>
 <br><p><a href="https://github.com/ukize233/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/8/n11778044.md#1">【名家专栏】FBI应为滥用外国情报监视法负责</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11779125.md#1">朱同：没有暴徒，只有暴政</a><br>
