--- a/gb/ncid280_3.md
+++ b/gb/ncid280_3.md
@@ -11,7 +11,6 @@
 <tr><td><h3><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/24/n11742827.md#1" target="_blank">大陆江湖为何“底朝天” 专家揭秘（下）</a><br></h3><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/24/n11742827.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/sss-600x400-1-150x120.jpg" align ="left"></a>王维洛说，自从修建三峡大坝以后，人们发现经过三峡下来的水（年水量）比原来少了10%，“它不是因为上游西藏高原源头区沙漠化后产水产得少了，最近一段时间，西藏高原由于温度的上升和冰川雪山的融化产水是增加了，上游的水比以前更多。”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 10:43 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/23/n11741434.md#1" target="_blank">哈尔滨医院儿科爆满 走廊座椅贴编号当病床</a><br></h3><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/23/n11741434.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Untitled-2-4-150x120.gif" align ="left"></a>最近，因寒冷所致的儿童哮喘再次席卷而来，哈尔滨各家医院儿科诊室爆满。因床位紧张，医院只好将走廊里的座椅贴上编号，当作打吊瓶的临时床位。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 7:08 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/23/n11741298.md#1" target="_blank">中国8000多冰川消失 恐陷长期水资源危机</a><br></h3><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/23/n11741298.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/12/1512050246441758-150x120.jpg" align ="left"></a>中国境内的冰川总面积逐渐缩小，有研究机构表示，中国几十年间已约有8,310条冰川完全消失。研究人员认为，若冰川持续消融，将造成西北干旱地区陷入长期水资源危机。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 4:20 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/2/n11762140.md#1" target="_blank">元旦黑龙江佳木斯机场起火 有巨大火球升腾</a><br></h3>2020年元旦，黑龙江佳木斯东郊机场发生火灾，现场有巨大火球升腾。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 3:52 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/1/n11760324.md#1" target="_blank">爆发不明肺炎疫情 武汉海鲜批发市场休市</a><br></h3>日前，湖北武汉市华南海鲜批发市场爆发集体感染不明肺炎疫情，引起民众恐慌。今天（1月1日），华南海鲜市场宣布休市整治。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 7:20 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/1/n11759473.md#1" target="_blank">2020新年首日四川自贡现4.3级地震</a><br></h3>2020年新年首日，四川自贡发生4.3级地震，震源深度21千米。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 1:53 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/31/n11756555.md#1" target="_blank">山西一在建隧道坍塌 5人死亡1人被困</a><br></h3>12月30日，山西晋城市一施工隧道发生断面塌方，塌方量约200立方米。有6人被困，截止今（31日）早9时11分，证实有5人死亡，1人受困。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月31日 9:45 AM							</td></tr>
@@ -29,5 +28,6 @@
 <tr><td><h3><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/23/n11739399.md#1" target="_blank">天津发生3.3级地震 北京唐山有震感</a><br></h3>12月23日凌晨2时44分，天津蓟州区发生3.3级地震。天津、北京、唐山等地震感明显。此次地震是天津7年来最大地震。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 11:04 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/22/n11738510.md#1" target="_blank">武汉南湖佰港城商场 一外卖员刺死商场员工</a><br></h3>12月22日下午2时许，武汉洪山区一商场内，一名身穿外卖服装的男子将一商场员工刺死。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月22日 7:29 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/22/n11738500.md#1" target="_blank">浙江一渔船沉没 7人失踪</a><br></h3>12月21日晚上8时左右，浙江浙椒渔60038船，在航行过程中沉没，11人被救起，7人失踪。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月22日 7:08 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/22/n11738295.md#1" target="_blank">长沙在建地铁附近地面塌陷 附近大面积停电</a><br></h3>12月21日，湖南长沙在建地铁施工路段附近的交叉口一路面发生坍塌。塌陷区域面积近百平方米。这起事故还造成附近区域大范围停电。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月22日 6:29 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ukize233/djy/blob/master/gb/ncid280_2.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/ukize233/djy/blob/master/gb/ncid280.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/ukize233/djy/blob/master/gb/ncid280_2.md#1">2</a>&nbsp;&nbsp;3&nbsp;&nbsp;<a href="https://github.com/ukize233/djy/blob/master/gb/ncid280_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/ukize233/djy/blob/master/gb/ncid280_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/ukize233/djy/blob/master/gb/ncid280_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/ukize233/djy/blob/master/gb/ncid280_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/ukize233/djy/blob/master/gb/ncid280_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/ukize233/djy/blob/master/gb/ncid280_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/ukize233/djy/blob/master/gb/ncid280_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/ukize233/djy/blob/master/gb/ncid280_4.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/ukize233/djy/blob/master/gb/ncid280_3.md#1<br><a href="https://github.com/ukize233/djy/blob/master/gb/ncid280_3.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/ukize233/djy/blob/master/gb/ncid280_3.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid280_3.htm">http://www.epochtimes.com/gb/ncid280_3.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
