--- a/gb/ncid280_2.md
+++ b/gb/ncid280_2.md
@@ -24,6 +24,7 @@
 <tr><td><h3><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/2/n11763828.md#1" target="_blank">武汉爆发似SARS“不明肺炎”民众如何防范？</a><br></h3><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/2/n11763828.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/pneumonia-010220-150x120.jpg" align ="left"></a>武汉近日爆发“不明病毒性肺炎”，民众担忧多年前夺走数百条人命的SARS（严重急性呼吸道症候群）重现。由于中共官方一向有隐瞒疫情的前科，专家建议身在疫区或近日前往当地的民众一定要做好防范。为因应武汉市的肺炎流行疫情，台湾已对武汉直航的班机进行登机检疫，希望将疫情阻绝于境外。面对不明肺炎 民众如何防范？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月03日 2:29 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/2/n11763808.md#1" target="_blank">家被强拆父母冤死 男子出狱报复致1死2伤</a><br></h3><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/2/n11763808.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/33-150x120.jpeg" align ="left"></a>新年首日，江苏仪征市刘集镇发生一起命案，凶手为曾因强拆上访坐牢的彭在林，出狱之后将村支书女儿以及当年的拆迁者2人杀伤，凶手自杀。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月03日 2:20 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/2/n11762363.md#1" target="_blank">武汉SARS疑云 附近居民不去市场也感染肺炎</a><br></h3><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/2/n11762363.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1154839639-150x120.jpg" align ="left"></a>2019年年末，湖北武汉华南海鲜市场爆发“不明病毒性肺炎”疫情，疑似“非典”（SARS）卷土重来。1月1日，陆媒称，市场附近居民也感染了不明原因肺炎，甚至有平时不去该市场买东西的居民。此外，台湾疾管署发布澄清新闻稿表示，网传武汉天河机场疑似肺炎感染者入境台湾是假的。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 5:56 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/5/n11769782.md#1" target="_blank">四川广安空货车与小客车相撞 致4人死亡</a><br></h3>1月5日下午，四川广安区广恒快速通道大龙场镇路段发生一起道路交通事故，导致4人死亡。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 8:17 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/5/n11769646.md#1" target="_blank">香港怀疑武汉肺炎案至16例 最小病人2岁</a><br></h3>湖北武汉不明肺炎病例在当地暴增并延烧至香港。在过去24小时内，新增8宗曾经到武汉，返港后出现肺炎等症状的病例。怀疑个案从14例增至16例。最小的病人只有2岁。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 8:08 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/5/n11769311.md#1" target="_blank">新年刚过 陕西连发两起杀人案 致4死1伤</a><br></h3>2020年新年刚过，陕西传出两起杀人案。1月2日，陕西西安市第66中学女教师周某娟被高三学生李某伤害致死。1月4日，汉中市宁强县，男子徐某林将王某、雷某杰杀死，将9岁女童王某彤致伤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 6:19 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/5/n11769417.md#1" target="_blank">因应武汉肺炎 香港启动“严重应变级别”</a><br></h3>武汉爆发疑似萨斯疫情，大陆社交媒体疯传后官方再补发公告，短短三天个案从27例飙升44例。香港近期到过武汉后发热、呼吸道感染及肺炎症状入院治疗有8人。港澳应对升级，香港启动“严重应变级别”。专家批北京政府处理失当，后果严重。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 6:14 PM							</td></tr>
@@ -38,6 +39,5 @@
 目击者说，该男子约50多岁，当场该男子就不行了，身上盖着蓝布。事后，肇事司机被带走调查，肇事车辆亦被扣押，现场.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月03日 4:10 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/2/n11762740.md#1" target="_blank">扬州大学多名学生感染肺结核 校方压制消息</a><br></h3>近日，多名自称江苏扬州大学的学生在网上爆料，所在学校有学生确诊肺结核。尽管该学校一再压制此消息，但是由于网民的迅速传播，此事件引起网络热议。校方才表示，患者已离开校园。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 10:00 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/2/n11762556.md#1" target="_blank">曾去过武汉 香港女子疑染肺炎正接受隔离</a><br></h3>湖北武汉市华南海鲜批发市场日前确诊27例不明原因肺炎，其中7人情况危重。香港屯门医院收到来自武汉肺炎怀疑个案，一名曾经到过武汉的女子，日前到屯门医院求医，她有上呼吸道感染征状及发烧，正接受隔离。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 7:33 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/2/n11762140.md#1" target="_blank">元旦黑龙江佳木斯机场起火 有巨大火球升腾</a><br></h3>2020年元旦，黑龙江佳木斯东郊机场发生火灾，现场有巨大火球升腾。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 3:52 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ukize233/djy/blob/master/gb/ncid280.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/ukize233/djy/blob/master/gb/ncid280.md#1">1</a>&nbsp;&nbsp;2&nbsp;&nbsp;<a href="https://github.com/ukize233/djy/blob/master/gb/ncid280_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/ukize233/djy/blob/master/gb/ncid280_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/ukize233/djy/blob/master/gb/ncid280_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/ukize233/djy/blob/master/gb/ncid280_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/ukize233/djy/blob/master/gb/ncid280_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/ukize233/djy/blob/master/gb/ncid280_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/ukize233/djy/blob/master/gb/ncid280_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/ukize233/djy/blob/master/gb/ncid280_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/ukize233/djy/blob/master/gb/ncid280_3.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/ukize233/djy/blob/master/gb/ncid280_2.md#1<br><a href="https://github.com/ukize233/djy/blob/master/gb/ncid280_2.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/ukize233/djy/blob/master/gb/ncid280_2.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid280_2.htm">http://www.epochtimes.com/gb/ncid280_2.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
