--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -30,6 +30,7 @@
 <a href="https://github.com/ukize233/djy/blob/master/gb/19/12/29/n11752526.md#1">【2019盘点】中共在香港问题的十大谎言</a><br>
 <br><p><a href="https://github.com/ukize233/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
+<a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11780590.md#1">反送中名人王婆婆被送押深圳：看守所如地狱</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11780385.md#1">【新闻看点】王立强爆遭威胁 台大选狂澜骤起</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11780383.md#1">【新闻看点】美击杀苏莱曼尼 陆民：让领导先走</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11780408.md#1">骆惠宁见深圳四高层和林郑 泄中共对港政策</a><br>
@@ -41,7 +42,6 @@
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11779864.md#1">脱贫率超99.99%？江苏“脱贫神话”遭质疑</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11778360.md#1">【翻墙必看】两神秘人对王立强发死亡威胁</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11778636.md#1">【专访】台立委黄国昌：中共渗透威胁多严重</a><br>
-<a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11779545.md#1">年幼时逃离伊朗 美军航母舰长现被派至中东</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/8/n11777696.md#1">美专家：北京可能成为台湾选举大输家</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11780211.md#1">前北约秘书长：台湾大选是中共资讯战演习场</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11779645.md#1">2019年 近万名法轮功学员被绑架骚扰</a><br>
